Extra space on the right of navbar fix

--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 body {
     background-image: url('img/kate.JPG');
     margin: 0;
+    max-width: 100vw;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    /* overflow-x: hidden; */
 }
 
 .page-wrapper {
@@ -25,6 +25,7 @@ body {
     top: 0;
     left: 0;
     height: 50px;
+
 }
 
 .navbar a {
@@ -59,9 +60,8 @@ body {
     align-items: center;
     justify-content: center;
     color: white;
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
-
 }
 
 h1 {
@@ -78,7 +78,7 @@ h2 {
     text-align: left;
     color: black;
     background-color: white;
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
 }
 
